--- a/style/style.css
+++ b/style/style.css
@@ -63,6 +63,8 @@ a {
     background-color: unset;
 }
 
+/* ================HERO CONTAINER=============== */
+
 .innerbox img {
     width: 100%;
     object-fit: contain;
@@ -112,6 +114,7 @@ a {
     padding-top: 65px;
 }
 
+/* ==================== O RESTORANE+VIDEOIMG ==================== */
 .orestorane {
     display: flex;
     flex-direction: column;
@@ -135,88 +138,90 @@ a {
 .video-img {
     display: flex;
     justify-content: center;
-}
-
-.gray-section {
-    background-color: rgb(236, 236, 236);
-    padding-top: 250px;
-}
-
-
-
-
-
-.parent {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-    grid-column-gap: 40px;
-    grid-row-gap: 30px;
-    padding-top: 50px;
-}
-
-.div1 {
-    grid-area: 1 / 1 / 3 / 5;
-}
-
-.div2 {
-    grid-area: 3 / 1 / 9 / 5;
-    padding-right: 45px;
-}
-
-.div3 {
-    grid-area: 1 / 5 / 5 / 8;
-}
-
-.div4 {
-    grid-area: 5 / 5 / 9 / 8;
-}
-
-.div5 {
-    grid-area: 1 / 8 / 5 / 11;
-}
-
-.div6 {
-    grid-area: 5 / 8 / 9 / 11;
-}
-
-.logo-wrapper {
-    display: flex;
-
-    gap: 20px;
-}
-
-.parent p {
-    font-size: 14px;
-    font-weight: 300;
-}
-
-.logo-wrapper h4 {
-    font-size: 16px;
-    font-weight: 300;
-    text-transform: uppercase;
-    padding-bottom: 20px;
-}
-
-.video-img {
     margin-bottom: -250px;
 }
 
-/* ===GALLERY=== */
-.gallery{
+
+/* ===========GRAY-SECTION GRIDS============ */
+.gray-section {
+    background-color: rgb(236, 236, 236);
+    padding-top: 250px;
+    padding-bottom: 60px;
+}
+.gray-section p {
+    font-weight: 300;
+    color: #616161;
+    font-size: 14px;
+    padding-top: 10px;
+}
+.container-gray{
+    max-width: 1015px;
+    margin: 0 auto;
+    padding-top: 60px;
+}
+
+.gray-grid {
+    display: grid;
+    gap: 25px;
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows: repeat(4, auto);
+}
+
+.itsbox-1 {
+    grid-column: 1/5;
+}
+
+.itsbox-2 {
+    grid-column: 1/5;
+    grid-row: 2/5;
+}
+
+.itsbox-3 {
+    grid-column: 6/9;
+    grid-row: 1/3;
+}
+
+.itsbox-4 {
+    grid-column: 6/9;
+}
+
+.itsbox-5 {
+    grid-column: 9/12;
+    grid-row: 1/3;
+}
+
+.itsbox-6 {
+    grid-column: 9/12;
+}
+.logo-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.logo-wrapper h4 {
+    font-size: 16px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+/* ==============GALLERY SECTION=============== */
+.gallery {
     padding: 120px 0 75px;
 }
-.gallery img{
+
+.gallery img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 
 }
-.container-grid{
+
+.container-grid {
     max-width: 1110px;
     margin: 0 auto;
     width: 100%;
 }
+
 .grid-container {
     display: grid;
     gap: 30px;
@@ -224,27 +229,34 @@ a {
     grid-template-rows: repeat(3, auto);
 
 }
-.box-1{
+
+.box-1 {
     grid-column: 1/4;
     justify-self: center;
     align-self: center;
 }
-.box-2{
+
+.box-2 {
     grid-column: 4/8;
 }
-.box-3{
+
+.box-3 {
     grid-column: 8/11;
-    
+
 }
-.box-4{
+
+.box-4 {
     grid-column: 1/7;
     grid-row: 2/4;
 }
-.box-5{
+
+.box-5 {
     grid-column: 7/11;
     grid-row: 2/3;
 }
-.box-6{
+
+.box-6 {
     grid-column: 7/11;
     grid-row: 3/4;
 }
+
