--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,12 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+h2 {
+    font-size: 36px;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
 .hero-container {
     max-width: 1800px;
     margin: 0 auto;
@@ -38,25 +44,30 @@ li {
     list-style: none;
 }
 
-a {
+.head-links {
     text-decoration: none;
     font-size: 13px;
     font-weight: 300;
     color: black;
+    padding: 7px 9px;
+    border: 1px solid transparent;
+
+
 }
 
-.btnlink {
-    padding: 7px 9px;
+.head-links:hover {
     color: #D1A954E5;
     border: 1px solid #D1A954E5;
-    text-transform: uppercase;
     font-weight: 400;
 }
 
 .sofit-house {
+    font-size: 13px;
     font-weight: 700;
     color: #D1A954;
+    text-decoration: none;
 }
+
 
 .burger {
     border: none;
@@ -76,7 +87,7 @@ a {
 }
 
 .box:hover .img-desc {
-    transition: 0.4s;
+    transition: 0.3s;
     bottom: 0;
 }
 
@@ -87,7 +98,7 @@ a {
     padding: 20px 15px;
     position: absolute;
     width: 100%;
-    bottom: -200px;
+    bottom: -270px;
 }
 
 .img-desc h3 {
@@ -130,15 +141,15 @@ a {
     font-weight: 300;
 }
 
-.orestorane h2 {
-    font-size: 36px;
-    font-weight: 300;
-}
-
 .video-img {
     display: flex;
     justify-content: center;
     margin-bottom: -250px;
+}
+
+.video-img img {
+    width: 100%;
+    object-fit: contain;
 }
 
 
@@ -148,13 +159,15 @@ a {
     padding-top: 250px;
     padding-bottom: 60px;
 }
+
 .gray-section p {
     font-weight: 300;
     color: #616161;
     font-size: 14px;
     padding-top: 10px;
 }
-.container-gray{
+
+.container-gray {
     max-width: 1015px;
     margin: 0 auto;
     padding-top: 60px;
@@ -176,6 +189,7 @@ a {
     grid-row: 2/5;
 }
 
+
 .itsbox-3 {
     grid-column: 6/9;
     grid-row: 1/3;
@@ -193,11 +207,13 @@ a {
 .itsbox-6 {
     grid-column: 9/12;
 }
+
 .logo-wrapper {
     display: flex;
     align-items: center;
     gap: 20px;
 }
+
 .logo-wrapper h4 {
     font-size: 16px;
     font-weight: 400;
@@ -227,7 +243,6 @@ a {
     gap: 30px;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(3, auto);
-
 }
 
 .box-1 {
@@ -260,3 +275,183 @@ a {
     grid-row: 3/4;
 }
 
+/* ================BG-SECTION================= */
+
+.bg-section {
+    background: url(../assets/cocktail.png)no-repeat center/cover;
+    height: 620px;
+}
+
+.bg-section h2 {
+    color: #FFFFFF;
+    text-align: center;
+    padding-bottom: 70px;
+
+}
+
+.light-btn {
+    display: flex;
+    gap: 90px;
+    justify-content: center;
+}
+
+.light-btn button {
+    padding: 23px 50px;
+    font-size: 16px;
+    font-weight: 300;
+    text-transform: uppercase;
+    border: none;
+    background-color: #FFFFFF;
+}
+
+.light-btn button:hover {
+    background-color: #D1A954E0;
+    color: #FFFFFF;
+    box-shadow: 1px 1px 14px 0px rgba(228, 183, 105, 0.3);
+}
+
+/* ===================CONTACT-SECTION===================== */
+.contact-section {
+    padding: 60px 15px;
+}
+
+.container-grid {
+    max-width: 1110px;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.cont-grid {
+    display: grid;
+    gap: 40px;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(11, auto);
+}
+
+.box-gr-1 {
+    grid-column: 1/7;
+    grid-row: 1/6;
+}
+
+.box-gr-2 {
+    grid-column: 1/4;
+    grid-row: 6/11;
+}
+
+.box-gr-3 {
+    grid-column: 4/7;
+    grid-row: 6/11;
+}
+
+.box-gr-4 {
+    grid-column: 7/13;
+    grid-row: 1/11;
+    gap: 10px;
+    padding-left: 20px;
+}
+
+.adress {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.location {
+    text-decoration: underline;
+}
+
+.in-adress {
+    gap: 15px;
+}
+
+.contact-section h2 {
+    padding-bottom: 20px;
+}
+
+.contact-section p {
+    font-size: 14px;
+    font-weight: 300;
+    color: #000000;
+}
+
+.contact-section h3 {
+    font-size: 16px;
+    font-weight: 300;
+    text-transform: uppercase;
+    padding: 20px 10px;
+    color: #000000;
+}
+
+.box-gr-1 p {
+    color: #616161;
+}
+
+.box-gr-4 button {
+    background-color: #D1A954;
+    border: none;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    padding: 12px 36px;
+}
+
+.box-gr-4 button:hover {
+    box-shadow: -1px 0px 10px 0px rgba(209, 169, 84, 0.5);
+}
+
+.box-gr-4 input {
+    border-width: 0 0 1px;
+    padding: 15px 5px 10px;
+    max-width: 540px;
+    width: 100%;
+    border-color: #D0D0D0;
+}
+
+.box-gr-4 textarea {
+    max-width: 540px;
+    max-height: 186px;
+    width: 100%;
+    margin-top: 35px;
+    padding: 15px 20px;
+    border-color: #D0D0D0;
+    resize: none;
+}
+
+::placeholder {
+    color: gray;
+}
+
+/* ================INSTAGRAM-SECTION================== */
+
+.instagram-section {
+    padding: 60px 0 0;
+    background-color: rgb(236, 236, 236);
+}
+
+.insta-title {
+    padding-bottom: 90px;
+    flex-direction: column;
+}
+
+.instagram-section p {
+    font-size: 9px;
+    text-transform: uppercase;
+}
+
+.logo-summerpalace {
+    flex-direction: column;
+    gap: 10px;
+}
+
+/* ============ here is a hidden container 00 ============ */
+.pictures-cont {
+    max-width: 1920px;
+    margin: 0 auto;
+    display: none;
+}
+
+/* =====================FOOTER===================== */
+.footer {
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px;
+}
